--- a/default.properties
+++ b/default.properties
@@ -1,20 +1,65 @@
-spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+##### common #####
+spring.profiles.active=dev
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        #show_sql: true
-        format_sql: true
-        default_batch_fetch_size: 100
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-file-size=20MB
 
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
+spring.messages.basename=messages,errors
+
+
+
+
+##### dev #####
+spring.config.activate.on-profile=dev
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=100
+
+spring.flyway.enabled=false
+
+db.path=dev
+spring.sql.init.schema-locations=classpath*:db/${db.path}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${db.path}/data.sql
+
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/foobar
+spring.datasource.username=sa
+spring.datasource.password=
+
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type=trace
+
+decorator.datasource.p6spy.enable-logging=true
+decorator.datasource.p6spy.multiline=true
+
+file.dir=C:/Users/eikhy/Desktop/dev_doc/testFileDir/
+
+jwt.key=3t5h8i3s3i1s2f4o5o6b7a8r5j4w5t6k7e8y1
+
+
+
+
+##### prod #####
+spring.config.activate.on-profile=prod
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=100
+
+# ?? ??
+#db.path=prod
+#spring.sql.init.schema-locations=classpath*:db/${db.path}/schema.sql
+#spring.sql.init.data-locations=classpath*:db/${db.path}/data.sql
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=none
+
+# flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.baseline-on-migrate=true
